tests/transpiler/x/zig/min_max_builtin.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/min_max_builtin.zig:6:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/min_max_builtin.zig:4:15: note: function cannot return an error
